--- a/css/styles.css
+++ b/css/styles.css
@@ -9,13 +9,53 @@
     
 }
 
+/*--Скидання дефолтних стилів--*/
+
+h1,
+h2,
+h3,
+h4,
+p{
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+ul,
+ol{
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-left: 0;
+}
+ 
+button{
+    cursor: pointer;
+}
+
+a{
+    text-decoration: none;
+}
+
+img{
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+
+address{
+    font-style: normal;
+}
+
 .list{
     list-style: none;
 }
 
+.link{
+    link-decoration: none;
+}
+
 body{
     color: var(--primery-text-color);
-    background-color: var(--main-backgroung-color);
+    background-color:var(--main-backgroung-color);
     font-family: Roboto, sans-serif; 
     font-weight: 700;
 font-size: 18px;
@@ -23,8 +63,36 @@ line-height: 2;
 letter-spacing: 0.06em;
 }
 
-a {
-    text-decoration: none;
+.container{
+    width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+/*--HEADER--*/
+
+.page-header-container{
+display: flex;
+align-items: center;
+border-bottom: 1px solid #ECECEC;
+}
+
+.header-navigation{
+    display: flex;
+    align-items: center;
+}
+
+.menu{
+    display: flex;
+    column-gap: 52px;
+    margin-left: auto;
+}
+
+.header-menu{
+    padding-top: 32px;
+    padding-bottom: 32px;
 }
 
 .blu{
@@ -33,6 +101,17 @@ a {
 .black{
     color:var(--logo-dark-color);
 }
+
+.logo{
+    font-family: 'Raleway', sans-serif;
+font-weight: 700;
+font-size: 26px;
+line-height: 1.19;
+letter-spacing: 0.03em;
+text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+margin-right: 94px;
+}
+
 
 .link-nav{
     color:var(--primery-text-color);
@@ -57,6 +136,7 @@ line-height: 1.14;
 letter-spacing: 0.02em;
 }
 
+
 .menu-link-nav:hover,
 .menu-link-nav:focus{
     color:var(--accent-color);
@@ -70,13 +150,30 @@ letter-spacing: 0.02em;
     color:var(--secondary-text-color);
 }
 
+
 .page-header {
     background-color: var(--main-backgroung-color);
 }
 
+.section{
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
+
+/*--HERO--*/
+
 .hero{
     background-color:var(--background-color);
+    text-align: center;
+    padding: 200px 200px;
+    margin: 0 auto;
 }
+
+.hero-box{
+    width: 700px;
+    margin: 0 auto;
+}
+
 .hero-title{
     color:var(--logo-light-color);
     font-family: 'Roboto', sans-serif;
@@ -86,6 +183,10 @@ line-height: 1.36;
 text-align: center;
 letter-spacing: 0.06em;
 text-transform: uppercase;
+width: 696px;
+margin-bottom: 30px;
+margin-left: auto;
+margin-right: auto;
 }
 
 .hero-btn{
@@ -99,7 +200,33 @@ display: flex;
 align-items: center;
 text-align: center;
 letter-spacing: 0.06em;
-cursor: pointer;
+display: block;
+margin: 0 auto;
+padding: 10px 32px;
+display: block;
+border-radius: 4px;
+min-width: 216px;
+}
+
+/*--FEATURE SECTION--*/
+
+.feature-section{
+    padding-top: 94px;
+    padding-bottom: 93px;
+}
+
+.list-benefits{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    margin-left: auto;
+    margin-right: auto;
+    column-gap: 30px;   
+}
+
+.feature-list{
+    width: 270px;
+flex-basis: calc(100%/4-30px);   
 }
 
 .feature-text{
@@ -111,6 +238,7 @@ line-height: 1.7;
 letter-spacing: 0.03em;
 }
 
+
 .feature-title{
     font-family: 'Roboto', sans-serif;
 font-weight: 700;
@@ -118,16 +246,41 @@ font-size: 14px;
 line-height: 1.14;
 letter-spacing: 0.03em;
 text-transform: uppercase;
+margin-bottom: 20px;
 }
+
+/*--EXAMPLES SECTION--*/
+
+.examples-section{
+    padding-top: 0;
+    padding-bottom: 94px;
+}
+
+.list-examplex{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+}
+
+.examples-list{
+width: 370px;
+flex-basis: calc((100%/3)-30px);
+}
+
 
 .section-examples{
     font-family: 'Roboto', sans-serif;
-font-weight: 700;
+    font-weight: 700;
 font-size: 36px;
 line-height: 1.17;
 text-align: center;
 letter-spacing: 0.03em;
+margin-left: auto;
+margin-bottom: 50px;
+margin-right: auto;
 }
+
+/*--TEAM SECTION--*/
 
 .team-section-team{
  font-family: 'Roboto', sans-serif;
@@ -135,7 +288,31 @@ font-weight: 700;
 font-size: 36px;
 line-height: 1.17;
 text-align: center;
-letter-spacing: 0.03em;   
+letter-spacing: 0.03em;  
+margin-left: auto;
+margin-right: auto;
+}
+
+.list-team{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+    margin-top:  50px;
+}
+
+.member-list{
+    width: 270px;
+    flex-basis: calc((100%/4)-30px);
+    
+}
+
+.member-content{
+border: 1px solid #F5F4FA;
+    border-radius: 0px 0px 4px 4px;
+    border-top: none;
+    padding-top: 29px;
+    padding-bottom: 29px;
+    background-color:#ffffff;
 }
 
 .member-team{
@@ -145,6 +322,7 @@ font-size: 16px;
 line-height: 1.19;
 text-align: center;
 letter-spacing: 0.03em;
+padding-bottom: 10px;
 }
 
 
@@ -158,9 +336,22 @@ text-align: center;
 letter-spacing: 0.03em;
 }
 
+/*--FOOTER--*/
+
 .contacts{
     background-color:var(--background-color);
 }
+
+.footer-section{
+    padding-top: 60px;
+    padding-bottom: 60px;
+}
+
+.logo-footer{
+    display: block;
+    margin-bottom: 20px;
+}
+
 
 .a-contact{
     color:var(--logo-light-color);
@@ -169,7 +360,6 @@ font-weight: 400;
 font-size: 14px;
 line-height: 1.71;
 letter-spacing: 0.03em;
-font-style: normal;
 } 
 
 .mail-link,
@@ -180,7 +370,6 @@ font-weight: 400;
 font-size: 14px;
 line-height: 1.71;
 letter-spacing: 0.03em;
-font-style: normal;
 }
 
 .mail-link:hover,
@@ -201,6 +390,23 @@ color:var(--accent-color)
 .white{
     color:var(--logo-light-color);
 }
+
+/*----PORTFOLIO----*/
+
+.portfolio-container{
+}
+
+.portfolio-list{
+    display: flex;
+     width: 575px;
+     justify-content: space-between;
+    margin-left: auto;
+    margin-right: auto;
+        column-gap: 8px;
+        margin-bottom: 50px;
+       
+}
+
 .section-btn{
     background-color:var(--secondary-background-color);
     color:var(--primery-text-color); 
@@ -211,7 +417,8 @@ font-size: 16px;
 line-height: 1.63;
 text-align: center;
 letter-spacing: 0.03em;
-cursor: pointer;
+padding: 6px 22px;
+border-radius: 4px;
 }
 
 .section-btn:hover,
@@ -219,6 +426,17 @@ cursor: pointer;
     background-color:var(--accent-color);
     color:var(--logo-light-color);
 }
+
+.portfolio-examples{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+}
+
+.portfolio-examples-list{
+ flex-basis: calc((100%-60px)/3;
+}
+
 
 .portfolio-tytle{
     color:var(--secondary-text-color);
@@ -237,18 +455,20 @@ line-height: 2;
 letter-spacing: 0.06em;
 }
 
-
-.section-team{background-color:var(--secondary-background-color);
+.portfolio-page-title{
+    display: block;
+    width: 370px;
+    margin-top: 20px;
+    padding: 20px 24px;
+    border: 1px solid #EEEEEE;
+    border-top: none;
 }
 
-.logo{
-    font-family: 'Raleway', sans-serif;
-font-weight: 700;
-font-size: 26px;
-line-height: 1.19;
-letter-spacing: 0.03em;
-text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+.section-team{
+    background-color:var(--secondary-background-color);
 }
+
+
 
 .span-prf{
  font-family: 'Roboto', sans-serif;
