--- a/css/styles.css
+++ b/css/styles.css
@@ -282,6 +282,10 @@ margin-right: auto;
 
 /*--TEAM SECTION--*/
 
+.section-team{
+    background-color:var(--secondary-background-color);
+}
+
 .team-section-team{
  font-family: 'Roboto', sans-serif;
 font-weight: 700;
@@ -360,7 +364,12 @@ font-weight: 400;
 font-size: 14px;
 line-height: 1.71;
 letter-spacing: 0.03em;
+margin-bottom: 9px;
 } 
+
+.mail-link{
+    margin-bottom: 9px;
+}
 
 .mail-link,
 .phone-link{
@@ -393,8 +402,6 @@ color:var(--accent-color)
 
 /*----PORTFOLIO----*/
 
-.portfolio-container{
-}
 
 .portfolio-list{
     display: flex;
@@ -434,9 +441,8 @@ border-radius: 4px;
 }
 
 .portfolio-examples-list{
- flex-basis: calc((100%-60px)/3;
+    flex-basis: calc(100% / 3)-60px;
 }
-
 
 .portfolio-tytle{
     color:var(--secondary-text-color);
@@ -453,6 +459,7 @@ font-weight: 700;
 font-size: 18px;
 line-height: 2;
 letter-spacing: 0.06em;
+margin-bottom: 4px;
 }
 
 .portfolio-page-title{
@@ -462,6 +469,7 @@ letter-spacing: 0.06em;
     padding: 20px 24px;
     border: 1px solid #EEEEEE;
     border-top: none;
+    border-radius: 4px;
 }
 
 .section-team{
