--- a/css/styles.css
+++ b/css/styles.css
@@ -73,10 +73,13 @@ letter-spacing: 0.06em;
 
 /*--HEADER--*/
 
+.page-header{
+border-bottom: 1px solid #ECECEC;
+}
+
 .page-header-container{
 display: flex;
 align-items: center;
-border-bottom: 1px solid #ECECEC;
 }
 
 .header-navigation{
@@ -108,7 +111,6 @@ font-weight: 700;
 font-size: 26px;
 line-height: 1.19;
 letter-spacing: 0.03em;
-text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 margin-right: 94px;
 }
 
@@ -150,10 +152,6 @@ letter-spacing: 0.02em;
     color:var(--secondary-text-color);
 }
 
-
-.page-header {
-    background-color: var(--main-backgroung-color);
-}
 
 .section{
     padding-top: 94px;
@@ -405,8 +403,7 @@ color:var(--accent-color)
 
 .portfolio-list{
     display: flex;
-     width: 575px;
-     justify-content: space-between;
+     justify-content: center;
     margin-left: auto;
     margin-right: auto;
         column-gap: 8px;
@@ -417,14 +414,14 @@ color:var(--accent-color)
 .section-btn{
     background-color:var(--secondary-background-color);
     color:var(--primery-text-color); 
-    font-family: 'Roboto', sans-serif;
-font-style: normal;
+    font-family: inherit;
 font-weight: 500;
 font-size: 16px;
 line-height: 1.63;
 text-align: center;
 letter-spacing: 0.03em;
 padding: 6px 22px;
+border: none;
 border-radius: 4px;
 }
 
@@ -432,6 +429,7 @@ border-radius: 4px;
 .section-btn:focus{
     background-color:var(--accent-color);
     color:var(--logo-light-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .portfolio-examples{
@@ -441,7 +439,7 @@ border-radius: 4px;
 }
 
 .portfolio-examples-list{
-    flex-basis: calc(100% / 3)-60px;
+    flex-basis: calc((100% / 3) - 60px);
 }
 
 .portfolio-tytle{
@@ -454,6 +452,7 @@ letter-spacing: 0.03em;
 }
 
 .portfolio-page{
+    color: var(--primery-text-color);
     font-family: 'Roboto', sans-serif;
 font-weight: 700;
 font-size: 18px;
@@ -465,11 +464,9 @@ margin-bottom: 4px;
 .portfolio-page-title{
     display: block;
     width: 370px;
-    margin-top: 20px;
     padding: 20px 24px;
     border: 1px solid #EEEEEE;
     border-top: none;
-    border-radius: 4px;
 }
 
 .section-team{
