--- a/css/styles.css
+++ b/css/styles.css
@@ -180,7 +180,7 @@ padding-top: 32px;
     text-align: center;
     padding: 200px 200px;
     margin: 0 auto;
-    padding: 200px;
+    padding: 200px 0;
 }
 
 
@@ -373,6 +373,7 @@ font-weight: 400;
 font-size: 14px;
 line-height: 1.71;
 letter-spacing: 0.03em;
+display: block;
 } 
 
 
@@ -384,6 +385,7 @@ font-weight: 400;
 font-size: 14px;
 line-height: 1.71;
 letter-spacing: 0.03em;
+display: block;
 }
 
 .mail-link:hover,
